fixed skills icons

--- a/attem.html
+++ b/attem.html
@@ -112,9 +112,9 @@
                   Resume
                 </a>
               </div>
-              <div class="space-y-4">
+              <!-- <div class="space-y-4">
                 <img src="logos\profile1.png" style="border-radius: 50%; height: 300px; width: 252px; margin-left: 1050px; margin-top: -270px; " alt="">
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
@@ -204,7 +204,7 @@
               </h2>
             </div>
             <div
-              class="grid w-full grid-cols-3 md:grid-cols-5 items-stretch justify-center gap-4 md:gap-6"
+              class="grid w-full grid-cols-2 md:grid-cols-5 items-stretch justify-center gap-4 md:gap-6"
             >
               <div
                 class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
@@ -221,6 +221,133 @@
                 </div>
               </div>
               <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">Data Structures</h3>
+                  <img
+                    src="logos\dsa.png"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">JVM</h3>
+                  <img
+                    src="logos\jvm.jpeg"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">MySQL</h3>
+                  <img
+                    src="logos\sql.png"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">Git-GitHub</h3>
+                  <img
+                    src="logos\git.png"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">Python</h3>
+                  <img
+                    src="logos\python-logo-only.png"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">ML, NLP</h3>
+                  <img
+                    src="logos\machine learning.jpg"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">HTML5</h3>
+                  <img
+                    src="logos\html.png"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">CSS3</h3>
+                  <img
+                    src="logos/css.png"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div
+                class="rounded-lg border bg-card p-4 bg-gray-100 text-card-foreground shadow-sm max-w-xs"
+                data-v0-t="card"
+              >
+                <div class="flex justify-between">
+                  <h3 class="text-xl font-bold">Javascript</h3>
+                  <img
+                    src="logos\javascript.jpg"
+                    height="25px"
+                    width="30px"
+                    alt=""
+                  />
+                </div>
+              </div>
+              
+              <!-- <div
                 class="rounded-lg border bg-card bg-gray-100 text-card-foreground shadow-sm max-w-xs"
                 data-v0-t="card"
               >
@@ -354,7 +481,7 @@
                     style="margin-left: 160px; margin-top: -37px;"
                   />
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
@@ -452,7 +579,7 @@
                   Feel free to reach out to me.
                 </p>
               </div>
-              <div class="space-y-4">
+              <div class="space-y-4 w-1/2">
                 <form
                   action="https://formspree.io/f/mbjndewy"
                   method="POST"
@@ -480,7 +607,7 @@
                     placeholder="Message"
                   ></textarea
                   ><button
-                    class="bg-black text-white inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-6 py-2" style=width:512px
+                    class="w-1/2 bg-black text-white inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-6 py-2" 
                     type="submit"
                   >
                     Send Message
