before fixing about section

--- a/attem.html
+++ b/attem.html
@@ -30,7 +30,7 @@
       class="flex flex-col min-h-screen bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 dark:bg-gray-900"
     >
       <header
-        class="px-4 lg:px-6 h-14 flex items-center fixed w-full z-10 bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 dark:bg-gray-900"
+        class=" hpos px-4 lg:px-6 h-14 flex items-center fixed w-full z-10 bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 dark:bg-gray-900"
       >
         <a class="flex items-center justify-center" href="#" rel="ugc">
           <!-- <img
@@ -64,13 +64,13 @@
           >
             Skills </a
           >
-          <!-- <a
+          <a
             class="text-sm font-medium hover:underline underline-offset-4 text-gray-200"
             href="#blogs"
             rel="ugc"
           >
             Blogs 
-            </a> -->
+            </a>
           <a
             class="text-sm font-medium hover:underline underline-offset-4 text-gray-200"
             href="#contact"
@@ -81,9 +81,12 @@
         </nav>
       </header>
       <main class="flex-1 pt-14" >
-        <section class="w-full py-10 md:py-24 lg:py-36" style="margin-left: -175px;" id="about" >
+        <section class="w-full py-10 md:py-24 lg:py-36 noborder" style="" id="about" >
           <div class="container px-4 md:px-6">
-            <div class="flex flex-col items-center space-y-4 text-center" style="margin-bottom: 0px; margin-top: 50px;">
+            <div class="flex flex-col items-center space-y-4 text-center" style="">
+              <div class="space-y-4">
+                <img src="logos\profile1.png" style="border-radius: 50%; height: 300px; width: 252px;" alt="">
+              </div>
               <div class="space-y-2">
                 <h1
                   class="text-3xl font-bold tracking-tighter text-green-400 sm:text-4xl md:text-5xl lg:text-6xl/none"
@@ -485,7 +488,7 @@
             </div>
           </div>
         </section>
-        <!-- <section class="w-full py-12 md:py-24 lg:py-12 " id="blogs" style="padding-top:60px">
+        <section class="w-full py-12 md:py-24 lg:py-12 " id="blogs" style="padding-top:60px">
           <div class="container px-4 md:px-6 space-y-8">
             <div class="space-y-6">
               <div
@@ -558,7 +561,7 @@
               >
             </div>
           </div>
-        </section> -->
+        </section>
         <section class="w-full py-12 md:py-24 lg:py-32" id="contact">
           <div class="container px-4 md:px-6">
             <div class="grid gap-10 lg:grid-cols-2">
