--- a/attem.html
+++ b/attem.html
@@ -80,8 +80,8 @@
           </a>
         </nav>
       </header>
-      <main class="flex-1 pt-14" >
-        <section class="w-full py-10 md:py-24 lg:py-36 noborder" style="" id="about" >
+      <main class="w-[100vw] flex-1 pt-1 custom-margin-top relative " >
+        <section class="w-full py-10 md:py-24 lg:py-25 noborder" style="" id="about" >
           <div class="container px-4 md:px-6">
             <div class="flex flex-col items-center space-y-4 text-center" style="">
               <div class="space-y-4">
@@ -136,9 +136,11 @@
               </h2>
               <br />
             </div>
-            <div
-              class="grid w-full grid-flow-col md:grid-flow-row grid-cols-3 items-stretch justify-center gap-6 md:gap-8"
+            <div  
+            
+              class="grid w-full  sm:grid-cols-1 md:grid-cols-3 md:grid-flow-col md:grid-flow-row   items-stretch  justify-center gap-6 md:gap-8 "
             >
+            <!-- lg:grid-cols-3 -->
               <a href="#" rel="ugc"
                 ><div
                   class="rounded-lg border bg-gray-100 bg-card text-card-foreground shadow-sm"
@@ -180,7 +182,7 @@
                     <h3 class="text-2xl font-bold text-zinc-950">
                       Pune Shuttle Line
                     </h3>
-                    <p class="mt-4 text-gray-500 dark:text-gray-400">
+                    <p class="mt-4 text-gray-500 dark:text-gray-400 h-full">
                       May 2022 - Jun 2022: Bus management system that manages
                       everything such as bus details, bookings, etc. Admin can
                       add, delete bus details. Users can book tickets, view
