blogs automated. 3 cards

--- a/attem.html
+++ b/attem.html
@@ -106,10 +106,10 @@
                   href="#"
                   rel="ugc"
                 >
-                  Contact Us </a
+                  Contact Me </a
                 ><a
                   class="inline-flex h-9 items-center justify-center text-white rounded-md border border-gray-200 border-gray-200 bg-white px-4 py-2 text-sm font-medium shadow-sm transition-colors hover:bg-gray-100 hover:text-gray-900 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:border-gray-800 dark:border-gray-800 dark:bg-gray-950 dark:hover:bg-gray-800 dark:hover:text-gray-50 dark:focus-visible:ring-gray-300"
-                  href="./resume.pdf"
+                  href="CV_AtharvTembhurnikar.pdf"
                   rel="ugc"
                 >
                   Resume
@@ -504,7 +504,8 @@
                 My Blogs
               </h2>
             </div>
-            <div
+            <div class='sk-ww-medium-publication-feed' data-embed-id='25377864'></div><script src='https://widgets.sociablekit.com/medium-publication-feed/widget.js' async defer></script>
+            <!-- <div
               class="grid w-full grid-cols-1 md:grid-cols-3 items-stretch justify-center gap-4 md:gap-6 h-[400px]"
             >
               <a href="#" rel="ugc"
@@ -562,7 +563,7 @@
                 </div></a
               >
             </div>
-          </div>
+          </div> -->
         </section>
         <section class="w-full py-12 md:py-24 lg:py-32" id="contact">
           <div class="container px-4 md:px-6">
