--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <div class="space-x-4">
                 <a
                   class="inline-flex h-9 items-center justify-center rounded-md bg-gray-900 px-4 py-2 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50 dark:text-gray-900 dark:hover:bg-gray-50/90 dark:focus-visible:ring-gray-300"
-                  href="#"
+                  href="#contact"
                   rel="ugc"
                 >
                   Contact Me </a
@@ -568,7 +568,7 @@
         <section class="w-full py-12 md:py-24 lg:py-32" id="contact">
           <div class="container px-4 md:px-6">
             <div class="grid gap-10 lg:grid-cols-2">
-              <div class="space-y-4 ml-36" >
+              <div class="space-y-4 md:ml-36" >
                 <div
                   class="inline-block rounded-lg text-black font-bold px-3 py-1 text-sm dark:bg-white"
                 >
