contact me fixed

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                   Feel free to reach out to me.
                 </p>
               </div>
-              <div class="space-y-4 w-1/2">
+              <div class="space-y-4 md:w-1/2">
                 <form
                   action="https://formspree.io/f/mbjndewy"
                   method="POST"
@@ -613,8 +613,9 @@
                     placeholder="Message"
                   ></textarea
                   ><button
-                    class="w-1/2 bg-black text-white inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-6 py-2" 
+                    class="w-1/2 mt-4 bg-black text-white inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-6 py-2" 
                     type="submit"
+                    style="margin-top: 20px;"
                   >
                     Send Message
                   </button>
