medium link updated

--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                 <h3 class="text-xl font-bold mt-4 text-white">LeetCode</h3>
               </div>
               <div class="max-w-xs h-full bg-transparent flex flex-col items-center">
-                <a href="https://medium.com/@atharvtembhurnikar21">
+                <a href="https://medium.com/@atharvtembhurnikar">
   <img style="filter:invert(1)" height="44px" width="44px" src="./logos/medium-alt-svgrepo-com.png" alt="">
                   
                 </a>
