--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   </head>
   <body>  
     <div
-      class="flex flex-col min-h-screen bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 dark:bg-gray-900"
+      class="flex flex-col min-h-screen bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 bg-gray-900"
     >
       <header
-        class=" hpos px-4 lg:px-6 h-14 flex items-center fixed w-full z-10 bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 dark:bg-gray-900"
+        class=" hpos px-4 lg:px-6 h-14 flex items-center fixed w-full z-10 bg-gradient-to-r from-gray-900 via-gray-800 to-gray-700 bg-gray-900"
       >
         <a class="flex items-center justify-center" href="#" rel="ugc">
           <!-- <img
@@ -94,7 +94,7 @@
                   Atharv Tembhurnikar
                 </h1>
                 <p
-                  class="mx-auto max-w-[700px] text-gray-500 md:text-xl dark:text-gray-400"
+                  class="mx-auto max-w-[700px] text-gray-500 md:text-xl text-gray-400"
                 >
                   3rd year student at VIIT, Pune studying Artificial
                   intelligence and Data Science
@@ -102,13 +102,13 @@
               </div>
               <div class="space-x-4">
                 <a
-                  class="inline-flex h-9 items-center justify-center rounded-md bg-gray-900 px-4 py-2 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:bg-gray-50 dark:text-gray-900 dark:hover:bg-gray-50/90 dark:focus-visible:ring-gray-300"
+                  class="inline-flex h-9 items-center justify-center rounded-md  px-4 py-2 text-sm font-medium  shadow transition-colors hover:bg-gray-900/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 bg-gray-50 text-gray-900 hover:bg-gray-50/90 focus-visible:ring-gray-300"
                   href="#contact"
                   rel="ugc"
                 >
                   Contact Me </a
                 ><a
-                  class="inline-flex h-9 items-center justify-center text-white rounded-md border border-gray-200 border-gray-200 bg-white px-4 py-2 text-sm font-medium shadow-sm transition-colors hover:bg-gray-100 hover:text-gray-900 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 dark:border-gray-800 dark:border-gray-800 dark:bg-gray-950 dark:hover:bg-gray-800 dark:hover:text-gray-50 dark:focus-visible:ring-gray-300"
+                  class="inline-flex h-9 items-center justify-center  rounded-md border border-gray-200 border-gray-200 bg-white px-4 py-2 text-sm font-medium shadow-sm transition-colors hover:bg-gray-100 hover:text-gray-900 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 border-gray-800 border-gray-800 bg-gray-950 hover:bg-gray-800 hover:text-gray-50 focus-visible:ring-gray-300"
                   href="CV_AtharvTembhurnikar.pdf"
                   rel="ugc"
                 >
@@ -125,7 +125,7 @@
           <div class="container px-6 md:px-8" >
             <div class="space-y-6">
               <div
-                class="inline-block rounded-lg text-black font-bold px-4 py-2 text-lg dark:bg-white"
+                class="inline-block rounded-lg text-black font-bold px-4 py-2 text-lg bg-white"
               >
                 Projects
               </div>
@@ -148,7 +148,7 @@
                 >
                   <div class="p-8">
                     <h3 class="text-2xl font-bold text-zinc-950">WebBrowser</h3>
-                    <p class="mt-4 text-gray-500 dark:text-gray-400">
+                    <p class="mt-4 text-gray-500 text-gray-400">
                       Jun 2023 - Aug 2023: A fully working web browser developed
                       using Java and JavaFX. Users can navigate the web, open
                       multiple windows, and manage browsing sessions. URLs can
@@ -164,7 +164,7 @@
                 >
                   <div class="p-8">
                     <h3 class="text-2xl font-bold text-zinc-950">EduTrip</h3>
-                    <p class="mt-4 text-gray-500 dark:text-gray-400">
+                    <p class="mt-4 text-gray-500 text-gray-400">
                       Feb 2023 - Mar 2023: An application for students willing
                       to opt for engineering in Pune. The Travelling Salesperson
                       Problem is used to traverse the shortest path in the top 5
@@ -182,7 +182,7 @@
                     <h3 class="text-2xl font-bold text-zinc-950">
                       Pune Shuttle Line
                     </h3>
-                    <p class="mt-4 text-gray-500 dark:text-gray-400 h-full">
+                    <p class="mt-4 text-gray-500 text-gray-400 h-full">
                       May 2022 - Jun 2022: Bus management system that manages
                       everything such as bus details, bookings, etc. Admin can
                       add, delete bus details. Users can book tickets, view
@@ -494,7 +494,7 @@
           <div class="container px-4 md:px-6 space-y-8">
             <div class="space-y-6">
               <div
-                class="inline-block rounded-lg bg-white text-black font-bold px-3 py-1 text-sm dark:bg-white "
+                class="inline-block rounded-lg bg-white text-black font-bold px-3 py-1 text-sm bg-white "
               >
                 Blogs
               </div>
@@ -515,7 +515,7 @@
                 >
                   <div class="p-5">
                     <h3 class="text-xl font-bold">Federated Learning in 6G</h3>
-                    <p class="mt-4 text-gray-500 dark:text-gray-400">
+                    <p class="mt-4 text-gray-500 text-gray-400">
                       Wireless network communication system has mushroomed over
                       the years. 3G enabled users for texting, web browsing, 4G
                       majorly provided Apps and multimedia services, 5G has
@@ -534,7 +534,7 @@
                     <h3 class="text-xl font-bold">
                       The one where we understand the work of ‘Transpondster’
                     </h3>
-                    <p class="mt-4 text-gray-500 dark:text-gray-400">
+                    <p class="mt-4 text-gray-500 text-gray-400">
                       The show aired from 1994 to 2004. No one knew what exactly
                       our beloved character Chandler does for a living,
                       including his friends. So, what was his occupation? Joey
@@ -554,7 +554,7 @@
                     <h3 class="text-xl font-bold">
                       Automating Snake-game using RL
                     </h3>
-                    <p class="mt-4 text-gray-500 dark:text-gray-400">
+                    <p class="mt-4 text-gray-500 text-gray-400">
                       In rapidly evolving landscape of Artificial Intelligence
                       and gaming, we are going to train AI model to play Snake
                       Game using reinforcement learning strategies.
@@ -570,7 +570,7 @@
             <div class="grid gap-10 lg:grid-cols-2">
               <div class="space-y-4 md:ml-36" >
                 <div
-                  class="inline-block rounded-lg text-black font-bold px-3 py-1 text-sm dark:bg-white"
+                  class="inline-block rounded-lg text-black font-bold px-3 py-1 text-sm bg-white"
                 >
                   Contact
                 </div>
@@ -580,7 +580,7 @@
                   Get in Touch
                 </h2>
                 <p
-                  class="mx-auto max-w-[700px] text-gray-500 md:text-xl dark:text-gray-400"
+                  class="mx-auto max-w-[700px] text-gray-500 md:text-xl text-gray-400"
                 >
                   Feel free to reach out to me.
                 </p>
@@ -697,7 +697,7 @@
       <footer
         class="flex flex-col gap-2 sm:flex-row py-6 w-full shrink-0 items-center px-4 md:px-6 border-t"
       >
-        <p class="text-xs text-gray-500 dark:text-gray-400">
+        <p class="text-xs text-gray-500 text-gray-400">
           © 2024 Atharv Tembhurnikar. All rights reserved.
         </p>
         <nav class="sm:ml-auto flex gap-4 sm:gap-6">
