--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   Contact Me </a
                 ><a
                   class="inline-flex h-9 items-center justify-center  rounded-md border border-gray-200 border-gray-200 bg-white px-4 py-2 text-sm font-medium shadow-sm transition-colors hover:bg-gray-100 hover:text-gray-900 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50 border-gray-800 border-gray-800 bg-gray-950 hover:bg-gray-800 hover:text-gray-50 focus-visible:ring-gray-300"
-                  href="CV_AtharvTembhurnikar.pdf"
+                  href="Atharv_Tembhurnikar.pdf"
                   rel="ugc"
                 >
                   Resume
@@ -147,13 +147,12 @@
                   data-v0-t="card"
                 >
                   <div class="p-8">
-                    <h3 class="text-2xl font-bold text-zinc-950">WebBrowser</h3>
+                    <h3 class="text-2xl font-bold text-zinc-950">Kickoff Football Organizer</h3>
                     <p class="mt-4 text-gray-500 text-gray-400">
-                      Jun 2023 - Aug 2023: A fully working web browser developed
-                      using Java and JavaFX. Users can navigate the web, open
-                      multiple windows, and manage browsing sessions. URLs can
-                      be entered directly into the address bar for quick access
-                      to websites.
+                      Dec 2023 - Feb 2024:  Java, JDBC, Swing application tailored for organising football-related data, including player profiles, team information,
+                      and coach details.
+                      A robust login system utilizing hashing techniques for security measures, ensuring confidentiality and integrity of user
+                      credentials
                     </p>
                   </div>
                 </div></a
@@ -163,13 +162,12 @@
                   data-v0-t="card"
                 >
                   <div class="p-8">
-                    <h3 class="text-2xl font-bold text-zinc-950">EduTrip</h3>
+                    <h3 class="text-2xl font-bold text-zinc-950">Farzi (Counterfeit Banknote Detection)</h3>
                     <p class="mt-4 text-gray-500 text-gray-400">
-                      Feb 2023 - Mar 2023: An application for students willing
-                      to opt for engineering in Pune. The Travelling Salesperson
-                      Problem is used to traverse the shortest path in the top 5
-                      colleges a student can opt into according to their score
-                      in the MHTCET examination.
+                      Oct 2023 - Dec 2023:  Detects Counterfeit Indian Currency using Image Processing Techniques.
+                      The aim of this project is to test the authenticity of Indian currency notes by preparing a system which takes the image
+                      of currency bill as input and gives the final result by applying various image processing and computer vision techniques
+                      and algorithms.                      
                     </p>
                   </div>
                 </div></a
@@ -180,13 +178,12 @@
                 >
                   <div class="p-8">
                     <h3 class="text-2xl font-bold text-zinc-950">
-                      Pune Shuttle Line
+                      Snake Master
                     </h3>
                     <p class="mt-4 text-gray-500 text-gray-400 h-full">
-                      May 2022 - Jun 2022: Bus management system that manages
-                      everything such as bus details, bookings, etc. Admin can
-                      add, delete bus details. Users can book tickets, view
-                      booked ticket history, and delete tickets, etc.
+                      Sept 2023 - Nov 2023:  Automated classic arcade Snake Game using reinforcement learning to achieve greater best scores.
+                      Human playable Snake game built using pygame.
+                      Agent connects model and game. Agent achieves good scores after some training games.
                     </p>
                   </div>
                 </div></a
