--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           >
             Blogs 
             </a>
-          <a
+          <!-- <a
             class="text-sm font-medium hover:underline underline-offset-4 text-gray-200"
             href="#contact"
             rel="ugc"
           >
             Contact Me
-          </a>
+          </a> -->
         </nav>
       </header>
       <main class="w-[100vw] flex-1 pt-1 custom-margin-top relative " >
@@ -85,7 +85,7 @@
           <div class="container px-4 md:px-6">
             <div class="flex flex-col items-center space-y-4 text-center">
               <div class="space-y-4">
-                <img src="logos\profile1.png" style="border-radius: 50%; height: 300px; width: 252px;" alt="">
+                <img src="logos\profilewebp.webp" style="border-radius: 50%; height: 300px; width: 252px;" alt="">
               </div>
               <div class="space-y-2">
                 <h1
