--- a/index.html
+++ b/index.html
@@ -310,6 +310,49 @@
           </div>
 
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Project 1 -->
+            <div class="project-card bg-gradient-to-br from-gray-800/80 to-gray-900/80 rounded-2xl p-8 hover:scale-105 transition-all duration-300 shadow-xl border border-gray-700/50" data-aos="fade-up" data-aos-delay="100">
+              <div class="mb-6">
+                <div class="w-12 h-12 bg-gradient-to-r from-primary to-accent rounded-lg flex items-center justify-center mb-4">
+                  <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.746 0 3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
+                  </svg>
+                </div>
+                <h3 class="text-2xl font-bold text-white mb-2">WebBrowser</h3>
+                <p class="text-sm text-primary font-semibold mb-4">Jun 2023 - Aug 2023</p>
+              </div>
+              <p class="text-gray-300 mb-6 leading-relaxed">
+                A fully working web browser developed using Java and JavaFX. Users can navigate the web, open multiple windows, and manage browsing sessions. URLs can be entered directly into the address bar for quick access to websites.
+              </p>
+              <div class="flex flex-wrap gap-2 mb-6">
+                <span class="px-3 py-1 bg-primary/20 text-primary rounded-full text-sm">Java</span>
+                <span class="px-3 py-1 bg-primary/20 text-primary rounded-full text-sm">JavaFX</span>
+                <span class="px-3 py-1 bg-primary/20 text-primary rounded-full text-sm">GUI</span>
+              </div>
+              <div class="flex gap-3">
+                <button class="flex-1 bg-primary/20 hover:bg-primary/30 text-primary px-4 py-2 rounded-lg transition-colors duration-300 text-sm font-medium">
+                  View Details
+                </button>
+                <button class="px-4 py-2 border border-primary/30 hover:border-primary text-primary rounded-lg transition-colors duration-300 text-sm">
+                  <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+                  </svg>
+                </button>
+              </div>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="project-card bg-gradient-to-br from-gray-800/80 to-gray-900/80 rounded-2xl p-8 hover:scale-105 transition-all duration-300 shadow-xl border border-gray-700/50" data-aos="fade-up" data-aos-delay="200">
+              <div class="mb-6">
+                <div class="w-12 h-12 bg-gradient-to-r from-accent to-primary rounded-lg flex items-center justify-center mb-4">
+                  <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"></path>
+                  </svg>
+                </div>
+                <h3 class="text-2xl font-bold text-white mb-2">EduTrip</h3>
+                <p class="text-sm text-primary font-semibold mb-4">Feb 2023 - Mar 2023</p>
+              </div>
+              <p class="text-gray-300 mb-6 leading-relaxed">
             <!-- EcoIntel Project -->
             <div class="project-card bg-gradient-to-br from-gray-800/80 to-gray-900/80 rounded-2xl p-8 hover:scale-105 transition-all duration-300 shadow-xl border border-gray-700/50" data-aos="fade-up" data-aos-delay="100">
               <div class="mb-6">
